# meridian-chatbot-evals

./: .env.example  .gitignore  README.md  captured_catalogues.json  pyproject.toml
.github/workflows/: ci.yml
datasets/: actions.yaml  fees.yaml  grounding.yaml  hallucination.yaml  helpfulness.yaml  input_robustness.yaml  limits.yaml  products_branches.yaml  robustness.yaml  safety.yaml  stale_context.yaml
docs/: ai-tool-usage-log.md  approach-note.md  execution-results.md  how-to-run.md  judge-methodology.md  manual-exploration.md  scaling-strategy.md  test-cases.md
fixtures/: demo_cassette.json  mock_demo.yaml  stale_demo.yaml  stale_demo_cassette.json
meridian_evals/: __init__.py  __main__.py  client.py  dataset.py  mock.py  models.py  report.py  runner.py  templating.py
meridian_evals/scorers/: __init__.py  llm_judge.py  registry.py  rule_based.py
results/: README.md
results/sample_run_52cases/: report.html  report.json  scored.csv
scripts/: capture_metadata.py
tests/: conftest.py  test_dataset.py  test_judge.py  test_mock_run.py  test_runner.py  test_scorers.py  test_templating.py
