[project]
name = "meridian-chatbot-evals"
version = "0.1.0"
description = "Evaluation harness for the Meridian banking AI assistant (test-case set + rule-based and LLM-as-judge scorers)."
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.6",
]

[project.scripts]
meridian-evals = "meridian_evals.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["meridian_evals", "meridian_evals.scorers"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]